read_api/manifests/read-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: read-api
  labels:
    app: read-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: read-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: read-api
    spec:
      containers:
        - name: read-api
          image: sweasytech/read-api:latest
