read_api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: read-api
spec:
  selector:
    app: read-api
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
