read_api/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: read-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: twitter-mock-timeline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: read-api
                port:
                  number: 8080
